--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ic_aicp_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme.AppCompat" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
