Revert "AicpExtras: Let's build it"
This reverts commit e85de26f3b9080b66a80cadbb4447b8a326f801c.

Change-Id: If8e7e4fd392577b0c3eb93db1af7a61f5f09b8cc

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ic_aicp_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.AppCompat" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
