--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_aicp_logo"
+        android:icon="@drawable/ic_aicp"
         android:label="@string/app_name"
         android:configChanges="orientation|screenSize"
         android:supportsRtl="true"
