Add Aicp header to About section
Image by @eboyee (Vasilj Milošević)

Change-Id: Ia1b22e4cc7f03edf41f83da641e5f6856f4d1984

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,4 +37,9 @@
         </activity>
     </application>
 
+    <activity
+        android:name=".ChangeLogActivity"
+        android:label="@string/changelog_title">
+     </activity>
+
 </manifest>
