--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,5 +50,9 @@
             android:name=".ChangeLogActivity"
             android:label="@string/changelog_title">
         </activity>
+        <activity
+            android:name=".Traffic"
+            android:label="@string/changelog_title">
+        </activity>
     </application>
 </manifest>
