--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,5 +54,9 @@
             android:name=".Traffic"
             android:label="@string/changelog_title">
         </activity>
+        <activity
+            android:name=".CarrierLabel"
+            android:label="@string/carrier_options">
+        </activity>
     </application>
 </manifest>
