--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,5 +58,9 @@
             android:name=".CarrierLabel"
             android:label="@string/carrier_options">
         </activity>
+        <activity
+            android:name=".BatteryBar"
+            android:label="@string/battery_bar_title">
+        </activity>
     </application>
 </manifest>
