--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,8 @@
         android:label="@string/app_name"
         android:configChanges="orientation|screenSize"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
