Lockscreen weather options [2/2]
Adapted for DU with a lot of changes to include

- Created switch for extended statusbar weather
- Mapped LockClock settings because creating a widget to just to this is stupid
- Made use of what we had and removed redundant crap
- Checkboxes are ugly, who's idea was that? Also "weather informations" hahaha
- Added dependencies because it makes sense
- Cleaned up the code some what

AICPfy:
- Make it work with AicpExtras
- Remove some checks that aren't needed, we have statusbar weather
  in another place, at least for now
- Add main lockscreen weather switch

Change-Id: I186413598dd643ba2d7c79c248e75b2f39dfc658

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,5 +84,10 @@
             android:label="@string/status_bar_temperature_title"
             android:theme="@style/FragmentTheme">
         </activity>
+        <activity
+            android:name=".Weather"
+            android:label="@string/weahter_lockscreen_category"
+            android:theme="@style/FragmentTheme">
+        </activity>
     </application>
 </manifest>
