--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lordclockan.aicpextras"
-    android:versionCode="23"
+    package="com.lordclockan"
+    android:versionCode="21"
     android:versionName="0.2.4">
 
     <uses-sdk
@@ -15,9 +15,11 @@
     <uses-permission android:name="android.permission.CONTROL_INCALL_EXPERIENCE" />
     <uses-permission android:name="android.permission.GET_APP_OPS_STATS" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MANAGE_APP_TOKENS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_FRAME_BUFFER" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SET_ACTIVITY_WATCHER" />
     <uses-permission android:name="android.permission.SET_ANIMATION_SCALE" />
@@ -39,7 +41,7 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true" >
         <activity
-            android:name=".MainActivity"
+            android:name=".aicpextras.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -50,44 +52,77 @@
         </activity>
 
         <activity
-            android:name=".ChangeLogActivity"
+            android:name=".aicpextras.ChangeLogActivity"
             android:label="@string/changelog_title">
         </activity>
         <activity
-            android:name=".Traffic"
+            android:name=".aicpextras.Traffic"
             android:label="@string/traffic_category"
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
-            android:name=".CarrierLabel"
+            android:name=".aicpextras.CarrierLabel"
             android:label="@string/carrier_options">
         </activity>
         <activity
-            android:name=".BatteryBar"
+            android:name=".aicpextras.BatteryBar"
             android:label="@string/battery_bar_title">
         </activity>
         <activity
-            android:name=".GestureAnywhereSettings"
+            android:name=".aicpextras.GestureAnywhereSettings"
             android:label="@string/gesture_anywhere_title"
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
-            android:name=".GestureAnywhereCreateGestureActivity"
+            android:name=".aicpextras.GestureAnywhereCreateGestureActivity"
             android:label="@string/gesture_anywhere_title">
         </activity>
         <activity
-            android:name=".GestureAnywhereBuilderActivity"
+            android:name=".aicpextras.GestureAnywhereBuilderActivity"
             android:label="@string/gesture_anywhere_title">
         </activity>
         <activity
-            android:name=".StatusBarWeather"
+            android:name=".aicpextras.StatusBarWeather"
             android:label="@string/status_bar_temperature_title"
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
-            android:name=".Weather"
+            android:name=".aicpextras.Weather"
             android:label="@string/weahter_lockscreen_category"
             android:theme="@style/FragmentTheme">
         </activity>
+
+        <activity android:name=".romstats.AnonymousStats"
+            android:label="@string/stats_title" >
+            <intent-filter>
+                <action android:name=".romstats.AnonymousStats" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".romstats.PreviewActivity" />
+
+        <receiver
+            android:name=".romstats.ReportingServiceManager"
+            android:enabled="true"
+            android:exported="false"
+            android:label="ReportingServiceManager" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.google.android.gms.analytics.AnalyticsService"
+            android:enabled="true"
+            android:exported="false"/>
+
+        <service
+            android:name=".romstats.ReportingService"
+            android:enabled="true"
+            android:exported="false"
+            android:label="ReportingService" >
+        </service>
+
     </application>
 </manifest>
