Implement App circle sidebar [2/2]
- Add vector to replace our old icons
- Increase trigger width, 10px makes it damn near impossible on tablets

Change-Id: Ie2a712073df31ebcde50c925206cd64d9d14931a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -91,6 +91,11 @@
             android:label="@string/weahter_lockscreen_category"
             android:theme="@style/FragmentTheme">
         </activity>
+        <activity
+            android:name=".aicpextras.AppCircleBar"
+            android:label="@string/category_app_circle_bar_title"
+            android:theme="@style/FragmentTheme">
+        </activity>
 
         <activity android:name=".romstats.AnonymousStats"
             android:label="@string/stats_title" >
