AicpExtras: Change Permissions for PreviewActivity
PS2: Re-add version Code

Change-Id: Ic017ce34393513373ec151376d188e60f1368419

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lordclockan"
     android:versionCode="21"
-    android:versionName="0.2.4">
+    android:versionName="0.2.4"
+    android:sharedUserId="android.uid.system">
 
     <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="23" />
+        android:minSdkVersion="21" />
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
