Add Yoga time to About logo
And many, many other :D

when adding new still img, exact img height
needs to be edited in hidden_img_layout.xml
or it will be sctreched

Change-Id: Ib011094f93c6d1d4d51f9930008cdfb1df1b47b8

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -96,6 +96,12 @@
             android:label="@string/category_app_circle_bar_title"
             android:theme="@style/FragmentTheme">
         </activity>
+        <activity
+            android:name=".aicpextras.HiddenAnimActivity"
+            android:label="@string/hidden_anim_activity_title"
+            android:theme="@style/FragmentTheme"
+            android:excludeFromRecents="true">
+        </activity>
 
         <activity android:name=".romstats.AnonymousStats"
             android:label="@string/stats_title" >
