WIP: Bringing back System app remover
DOESN'T START

Change-Id: I3abbf89b4b3eee5da28f468b9dffe138bd3d7b84

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -97,6 +97,10 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.SystemappRemover"
+            android:label="@string/system_app_remover">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/FragmentTheme"
