Forward port System App Remover from KitKat (part 1)
AICPfy
Make it work in AicpExtras app

Change-Id: Ie71099cf4e8df4d1153d2e4da8df02d082a237a0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,12 @@
             android:label="@string/traffic_category"
             android:theme="@style/FragmentTheme">
         </activity>
+	<activity
+	    android:name=".aicpextras.SystemappRemover"
+	    android:label="@string/system_app_remover"
+	    android:theme="@style/FragmentTheme"
+	    android:excludeFromRecents="true">
+	</activity>
         <activity
             android:name=".aicpextras.CarrierLabel"
             android:label="@string/carrier_options">
