--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -97,6 +97,12 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.SystemappRemover"
+            android:label="@string/system_app_remover"
+            android:theme="@style/FragmentTheme"
+            android:excludeFromRecents="true">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/FragmentTheme"
