AE: remove appl from system user let it run as untrusted
Change-Id: Id3862f6f0679264f264d337baff000089b669f57

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lordclockan"
     android:versionCode="21"
-    android:versionName="0.2.4"
-    android:sharedUserId="android.uid.system">
+    android:versionName="0.2.4" >
 
     <uses-sdk
         android:minSdkVersion="21" />
