AE: Slim Recents (2/2)
AICPfy:
- Brought back from AicpLP

Change-Id: I081fbaa3e5f5c73a0c9625aa86a306399a260c14

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,6 +104,11 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.SlimRecentPanel"
+            android:label="@string/use_slim_recents_title"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
             android:name=".aicpextras.PieControl"
             android:label="@string/pa_pie_control_title"
             android:theme="@style/FragmentTheme">
