AE: CarrierLabel: PreferenceActivity -> AppCompatActivity
PS2: Add Fragment style theme

Change-Id: I23421f9446e781ab45535d83cd8fd9165cdedc26

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,7 +68,8 @@
 	</activity>
         <activity
             android:name=".aicpextras.CarrierLabel"
-            android:label="@string/carrier_options">
+            android:label="@string/carrier_options"
+            android:theme="@style/FragmentTheme">
         </activity>
         <activity
             android:name=".aicpextras.BatteryBar"
