AE: AOKP system animations (2/2) - Squashed
Includes this from @cristianomatos:
https://github.com/AICP/packages_apps_Settings/commit/2b6b1efadb4c2471780e6cdc1f01db20b4e7f2bc

Change-Id: Ia12bf782a1f6062b39db9e8f16c258ecdfb5db4c

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -119,6 +119,11 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.AnimationControls"
+            android:label="@string/aokp_animation_title"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/FragmentTheme"
