AE: Make Posible  to change DNS WIP
Change-Id: Idcfa2e95e2daf1b5c5f2f221e74549ea2f36ae32

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -66,6 +66,12 @@
 	    android:theme="@style/FragmentTheme"
 	    android:excludeFromRecents="true">
 	</activity>
+	<activity
+	    android:name=".aicpextras.DNSChanger"
+	    android:label="@string/dns_changer"
+	    android:theme="@style/FragmentTheme"
+	    android:excludeFromRecents="true">
+	</activity>
         <activity
             android:name=".aicpextras.CarrierLabel"
             android:label="@string/carrier_options"
