AE: IME animations (2/2)
Taken from here:
https://gerrit.omnirom.org/#/c/4249/36

AICPfy:
- Giving authorship to Squadzone
PS2:
- Increase padding for EditText
- Set EditText color
PS3:
- Idiot, it's hint color, not text color
- Also use secondary text color and increase padding a little more

Change-Id: I3872a0366bfe813da28219f0449e846469f932c9

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -124,6 +124,11 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.KeyboardAnimationInterfaceSettings"
+            android:label="@string/ime_animation_title"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/FragmentTheme"
