--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,6 +102,11 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.AppSidebar"
+            android:label="@string/app_sidebar_title"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
             android:name=".aicpextras.SlimRecentPanel"
             android:label="@string/use_slim_recents_title"
             android:theme="@style/FragmentTheme">
