BatteryBar: Add ListPreference for devices without navbar
Rework BatteryBar fragment

Change-Id: I06acfcc48e66a3b222e9b24488648357a2fa74a0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -71,7 +71,8 @@
         </activity>
         <activity
             android:name=".aicpextras.BatteryBar"
-            android:label="@string/battery_bar_title">
+            android:label="@string/battery_bar_title"
+            android:theme="@style/FragmentTheme">
         </activity>
         <activity
             android:name=".aicpextras.GestureAnywhereSettings"
