--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -138,6 +138,11 @@
             android:theme="@style/FragmentTheme">
         </activity>
         <activity
+            android:name=".aicpextras.FloatingWindows"
+            android:label="@string/floating_windows"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/FragmentTheme"
