Floating Windows settings
AICPfy

Change-Id: Ibfc7d2c29001597942753a465600cc03a1486abf
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -134,6 +134,11 @@
         </activity>
         <activity
             android:name=".aicpextras.KeyboardAnimationInterfaceSettings"
+            android:label="@string/floating_windows"
+            android:theme="@style/FragmentTheme">
+        </activity>
+        <activity
+            android:name=".aicpextras.FloatingWindows"
             android:label="@string/ime_animation_title"
             android:theme="@style/FragmentTheme">
         </activity>
