--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name=".aicpextras.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="screenSize|orientation"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
