Playing with colors, amber is the new black
<color name="colorPrimary">#ffab00</color> //Amber
Remove local fragment theme, now whole app can be themed

Change-Id: Ie0ebaaa55f7cd25804551641f27e376fe62c647b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,29 +56,24 @@
         </activity>
         <activity
             android:name=".aicpextras.Traffic"
-            android:label="@string/traffic_category"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/traffic_category">
         </activity>
 	<activity
 	    android:name=".aicpextras.SystemappRemover"
 	    android:label="@string/system_app_remover"
-	    android:theme="@style/FragmentTheme"
 	    android:excludeFromRecents="true">
 	</activity>
         <activity
             android:name=".aicpextras.CarrierLabel"
-            android:label="@string/carrier_options"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/carrier_options">
         </activity>
         <activity
             android:name=".aicpextras.BatteryBar"
-            android:label="@string/battery_bar_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/battery_bar_title">
         </activity>
         <activity
             android:name=".aicpextras.GestureAnywhereSettings"
-            android:label="@string/gesture_anywhere_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/gesture_anywhere_title">
         </activity>
         <activity
             android:name=".aicpextras.GestureAnywhereCreateGestureActivity"
@@ -90,68 +85,55 @@
         </activity>
         <activity
             android:name=".aicpextras.StatusBarWeather"
-            android:label="@string/status_bar_temperature_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/status_bar_temperature_title">
         </activity>
         <activity
             android:name=".aicpextras.Weather"
-            android:label="@string/weahter_lockscreen_category"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/weahter_lockscreen_category">
         </activity>
         <activity
             android:name=".aicpextras.AppCircleBar"
-            android:label="@string/category_app_circle_bar_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/category_app_circle_bar_title">
         </activity>
         <activity
             android:name=".aicpextras.AppSidebar"
-            android:label="@string/app_sidebar_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/app_sidebar_title">
         </activity>
         <activity
             android:name=".aicpextras.SlimRecentPanel"
-            android:label="@string/use_slim_recents_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/use_slim_recents_title">
         </activity>
         <activity
             android:name=".aicpextras.PieControl"
-            android:label="@string/pa_pie_control_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/pa_pie_control_title">
         </activity>
         <activity
             android:name=".aicpextras.PieColor"
-            android:label="@string/pa_pie_control_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/pa_pie_control_title">
         </activity>
         <activity
             android:name=".aicpextras.PieTargets"
-            android:label="@string/pa_pie_control_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/pa_pie_control_title">
         </activity>
         <activity
             android:name=".aicpextras.AnimationControls"
-            android:label="@string/aokp_animation_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/aokp_animation_title">
         </activity>
         <activity
             android:name=".aicpextras.KeyboardAnimationInterfaceSettings"
-            android:label="@string/ime_animation_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/ime_animation_title">
         </activity>
         <activity
             android:name=".aicpextras.FloatingWindows"
-            android:label="@string/floating_windows"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/floating_windows">
         </activity>
         <activity
             android:name=".aicpextras.BootDialog"
-            android:label="@string/boot_dialog_title"
-            android:theme="@style/FragmentTheme">
+            android:label="@string/boot_dialog_title">
         </activity>
         <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
-            android:theme="@style/FragmentTheme"
             android:excludeFromRecents="true">
         </activity>
 
