--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:label="@string/changelog_title">
         </activity>
         <activity
+            android:name=".SettingsActivity"
+            android:label="SettingsActivity">
+        </activity>
+        <activity
             android:name=".aicpextras.Traffic"
             android:label="@string/traffic_category">
         </activity>
