[SQUASHED] Implement XOSP Blur personalization options (2/2)
All credits for original work goes to serjar (Author of the very famous Xposed module: Blurred System UI)

Credits goes also to: Aaahh  for the initial implementation of it in MarshROM and continued by me after in XOSP

Original repository of the Xposed Module: https://github.com/serajr/Blurred-System-UI

** Available options

- Blurred expanded StatusBar
- Translucent Notifications
- Blurred StausBar header
- Blurred QS in Notification Header expanded
- Blurred Recent apps
- Ability to change Blur Radius and Blur scale

AICPfy:
Squashed these patches in:
https://github.com/XOSP-Project/android_packages_apps_Settings/commit/06fdcc89690054097a6a98a2525d62236d74d89c
https://github.com/XOSP-Project/android_packages_apps_Settings/commit/2f786e192d85fc7e6af871aee240fd714c77cdad
https://github.com/XOSP-Project/android_packages_apps_Settings/commit/84ddb0fe2b1f15e70cfcd27a1520b134d734ed42

PS2: Replaced aicpextras:max with android:max since the former didn't work
     This should fix the FC's

Change-Id: Id43c373154528163e27f3cfa67695669c1a4ace6

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -157,6 +157,11 @@
             android:label="@string/boot_dialog_title">
         </activity>
         <activity
+            android:name=".aicpextras.BlurPersonalizations"
+            android:theme="@style/PreferenceTheme"
+            android:label="@string/boot_dialog_title">
+        </activity>
+        <activity
             android:name=".aicpextras.HiddenAnimActivity"
             android:label="@string/hidden_anim_activity_title"
             android:theme="@style/PreferenceTheme"
